feature: add put method
